# pysemco

./: LICENSE  License  ReadMe.md  pyproject.toml
demo/: SemanticCode.sty  demo.cpp  demo.ipynb  demo.tex  demo_ansi.py
demo/snippets/: demo.asm  demo.cpp  demo.py
src/pysemco/: __init__.py  pysemco_tex.py  serialization.py
src/pysemco/convert/: __init__.py  ansi.py  colors.py  html.py  latex.py
src/pysemco/lsp/: __init__.py  clangd.py  clangd_params.json  language_server.py  pyright.py  pyright_params.json
src/pysemco/lsp/download/: clangd.py  defs.py  pyright.patch  pyright.py
src/pysemco/tokens/: __init__.py  combine.py  compute.py  defs.py  html_convert.py  pygments.py  semantic.py  texify.py
